--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: diskusi_bisnis_mobile
 description: Aplikasi Mobile DiskusiBisnis (Flutter)
 publish_to: 'none'
-version: 1.0.1+2
+version: 1.0.2+3
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -28,6 +28,7 @@ dependencies:
   smooth_page_indicator: ^2.0.1
   flutter_local_notifications: ^18.0.1
   app_links: ^6.3.3
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
