--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   app_links: ^6.3.3
   socket_io_client: ^2.0.3+1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
